# LvglAPI

./: .gitignore  CHANGES.md  CMakeLists.txt  LICENSE  README.md
lodepng/: CMakeLists.txt
lvgl/: CMakeLists.txt  dirent_windows.h  lv_conf.h  lvgl.cmake  lvgl_api.c  lvgl_api_fs.c  lvgl_api_png.c
lvgl/include/lvgl/: lgvl_api.h  lv_config.h  lvgl_api.h
simulator/: CMakeLists.txt
simulator/lvgl_qt/: CMakeLists.txt  LvglGraphicsView.cpp  LvglGraphicsView.hpp  LvglImageProvider.cpp  LvglImageProvider.hpp  LvglRenderer.cpp  LvglRenderer.hpp  MainWindow.cpp  MainWindow.hpp
simulator/lvgl_qt_quick/: CMakeLists.txt  LvglImageProvider.cpp  LvglImageProvider.hpp  main.cpp  main.qml
simulator/lvgl_qt_widgets/: CMakeLists.txt  LvglGraphicsView.cpp  LvglGraphicsView.hpp  MainWindow.cpp  main.cpp
tests/: CMakeLists.txt  sl_settings.json
tests/src/: UnitTest.hpp  main.cpp  sl_config.h
